--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="w3-container">
       <img src="data/profile.jpg" style="width:50%;" class="w3-round"><br><br>
       <h2><b>Chenghao Yang</b></h2>
-      <p><b>Last update: 2024.07.01</b></p>
+      <p><b>Last update: 2024.09.03</b></p>
     </div>
     <div class="w3-bar-block w3-center">
       <a href="#biography" class="w3-bar-item w3-button">Biography</a>
@@ -39,7 +39,7 @@
     <div class="w3-container w3-card w3-white w3-margin-bottom" id="biography">
       <img src="data/profile.jpg" style="width:75px;" class="w3-circle w3-right w3-margin w3-hide-large">
       <h2><b>Biography</b></h2>
-      <p>I am a final year undergraduate student at <a style="color: #0088cc" href="https://www.ustc.edu.cn/">University of Science and Technology of China (USTC)</a>, supervised by Prof. <a style="color: #0088cc" href="https://scholar.google.com/citations?hl=en&user=7620QAMAAAAJ">Nenghai Yu</a>.</p>
+      <p>I am a final year undergraduate student at <a style="color: #0088cc" href="https://www.ustc.edu.cn/">University of Science and Technology of China (USTC)</a>, supervised by Prof. <a style="color: #0088cc" href="https://scholar.google.com/citations?hl=en&user=7620QAMAAAAJ">Nenghai Yu</a> and Prof. <a style="color: #0088cc" href="https://scholar.google.com/citations?user=JZjOMdsAAAAJ">Qi Chu</a>.</p> 
       <b>Research Interests:</b> Artificial Intelligence Security, Multimodal Agent
       <br><br>
       <b>Feel free to reach out to me for any form of communication or collaboration! 😊</b>
@@ -106,6 +106,9 @@
               <td width="80%" align="left">◆ <b>Wang Xiaomo Talent Program in Cyber Science and Technology Scholarship <font color=#bf0000><b>× 4</b></font>, <i><a href="https://www.ustc.edu.cn">USTC</a></i></b></td>
               <td align="right"><b>2021, 2022, 2023, 2024</b></td>
             </tr>
+            <tr>
+              <td width="80%" align="left">◆ Longfor Scholarship, <i><a href="https://www.ustc.edu.cn/">USTC</a></i></td>
+              <td align="right">2023</td>
           </tbody>
       </table>
       <br>
@@ -121,7 +124,7 @@
                 <td>
                     <b>National University of Singapore</b>
                     <br><span class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2023 - Jun 2024</span>
-                    <br> Multi-modal Agent Research Intern
+                    <br> Multi-Modal Agent Research Intern (Remote)
                     <br> Supervised by Research Fellow <a style="color: #0088cc" href="https://github.com/anzhang314">An Zhang</a>
                 </td>
             </tr>
