--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="w3-container">
       <img src="data/profile.jpg" style="width:50%;" class="w3-round"><br><br>
       <h2><b>Chenghao Yang</b></h2>
-      <p><b>Last update: 2024.09.03</b></p>
+      <p><b>Last update: 2024.09.09</b></p>
     </div>
     <div class="w3-bar-block w3-center">
       <a href="#biography" class="w3-bar-item w3-button">Biography</a>
@@ -40,7 +40,7 @@
       <img src="data/profile.jpg" style="width:75px;" class="w3-circle w3-right w3-margin w3-hide-large">
       <h2><b>Biography</b></h2>
       <p>I am a final year undergraduate student at <a style="color: #0088cc" href="https://www.ustc.edu.cn/">University of Science and Technology of China (USTC)</a>, supervised by Prof. <a style="color: #0088cc" href="https://scholar.google.com/citations?hl=en&user=7620QAMAAAAJ">Nenghai Yu</a> and Prof. <a style="color: #0088cc" href="https://scholar.google.com/citations?user=JZjOMdsAAAAJ">Qi Chu</a>.</p> 
-      <b>Research Interests:</b> Artificial Intelligence Security, Multimodal Agent
+      <b>Research Interests:</b> Artificial Intelligence Security, Multimodal Agent, Multimodal LLM hallucination.
       <br><br>
       <b>Feel free to reach out to me for any form of communication or collaboration! 😊</b>
       <br>
