Update Paper info

--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
           </a>
         </li> -->
         <li>
-          [2024-06-09] 🎉 
+          [2025-01-23] 🎉 Our Paper <b>"Hello Again! LLM-powered Personalized Agent for Long-term Dialogue"</b> has been accepted by NAACL 2025 Main Conference. <a href="https://arxiv.org/pdf/2406.05925v1" target="_blank" rel="noopener">[Paper]</a> 
+          <a href="https://github.com/leolee99/LD-Agent" target="_blank" rel="noopener">[Code]</a>
+        </li>
+        <li>
+          [2024-06-09]  
 Our paper <b>"Hello Again! LLM-powered Personalized Agent for Long-term Dialogue"</b> has been published on arXiv. 
 <a href="https://arxiv.org/pdf/2406.05925v1" target="_blank" rel="noopener">[Paper]</a> 
 <a href="https://github.com/leolee99/LD-Agent" target="_blank" rel="noopener">[Code]</a>
@@ -133,7 +137,7 @@ Our paper <b>"Hello Again! LLM-powered Personalized Agent for Long-term Dialogue
               An Zhang<span style="color:#bf0000;"><b><sup>†</sup></b></span>, 
               Yang Deng, Xiang Wang, Tat-Seng Chua
             </i><br>
-            <i>arXiv Preprint, 2024</i> | 
+            <font style="color: gray; font-weight: bold;">NAACL 2025 Main Conference</font> | 
             <a href="https://arxiv.org/abs/2406.05925v1">Paper</a> | 
             <b>Code:</b> <a href="https://github.com/leolee99/LD-Agent">Github</a>
           </td>
