--- a/index.html
+++ b/index.html
@@ -361,10 +361,11 @@
       <i class="fas fa-eye" style="color: #4a5568;"></i>
       <span style="font-size: 0.95rem;">
         Total Visitors: 
-        <span id="busuanzi_container_site_uv" style="display: none;">
-          <span id="busuanzi_value_site_uv" style="font-weight: 600; color: #4a5568; margin-left: 4px;">0</span>
+        <span style="font-weight: 600; color: #4a5568; margin-left: 4px;">
+          <a href="https://counter.dev/dashboard.html" target="_blank" style="text-decoration: none; color: inherit;">
+            <script>if(!sessionStorage.getItem("_swa")&&document.referrer.indexOf(location.protocol+"//"+location.host)!== 0){fetch("https://counter.dev/track?"+new URLSearchParams({referrer:document.referrer,screen:screen.width+"x"+screen.height,user:"Syuchin",utcoffset:"8"}))};sessionStorage.setItem("_swa","1");</script>
+          </a>
         </span>
-        <span id="visitor-loading" style="font-weight: 600; color: #4a5568; margin-left: 4px;">...</span>
       </span>
     </div>
   </div>
