--- a/index.html
+++ b/index.html
@@ -355,15 +355,16 @@
          <!-- Visitor Counter -->
   <div style="text-align: center; padding: 10px 20px; margin-top: 10px; color: #666;">
     <div style="display: inline-flex; align-items: center; gap: 8px; background: rgba(255, 255, 255, 0.8); 
-         padding: 8px 16px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+         padding: 6px 14px; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);
          transition: all 0.3s ease;
          cursor: default;">
       <i class="fas fa-eye" style="color: #4a5568;"></i>
-      <span style="font-size: 0.95rem;">
+      <span style="font-size: 0.9rem; color: #4a5568;">
         Total Visitors: 
-        <span style="font-weight: 600; color: #4a5568; margin-left: 4px;">
-          <a href="https://counter.dev/dashboard.html" target="_blank" style="text-decoration: none; color: inherit;">
-            <script>if(!sessionStorage.getItem("_swa")&&document.referrer.indexOf(location.protocol+"//"+location.host)!== 0){fetch("https://counter.dev/track?"+new URLSearchParams({referrer:document.referrer,screen:screen.width+"x"+screen.height,user:"Syuchin",utcoffset:"8"}))};sessionStorage.setItem("_swa","1");</script>
+        <span style="margin-left: 4px;">
+          <a href="https://hits.seeyoufarm.com" target="_blank" style="text-decoration: none;">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsyuchin.github.io&count_bg=%234A5568&title_bg=%23F0F0F0&icon=&icon_color=%23E7E7E7&title=visits&edge_flat=true" 
+                 style="vertical-align: middle;" alt="Hits"/>
           </a>
         </span>
       </span>
