--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
       <span style="font-size: 0.9rem; color: #4a5568;">
         Total Visitors: 
         <span style="margin-left: 4px;">
-          <a href="https://hits.seeyoufarm.com" target="_blank" style="text-decoration: none;">
-            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsyuchin.github.io&count_bg=%234A5568&title_bg=%23F0F0F0&icon=&icon_color=%23E7E7E7&title=visits&edge_flat=true" 
-                 style="vertical-align: middle;" alt="Hits"/>
-          </a>
+          <span style="font-weight: 600; color: #000000;">
+            <script async src="https://hits.seeyoufarm.com/api/count/incr/count.svg?url=https%3A%2F%2Fsyuchin.github.io"></script>
+            <noscript>0</noscript>
+          </span>
         </span>
       </span>
     </div>
