--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
       <table>
         <tr>
           <td class="logo-cell" style="width:250px;">
-            <img src="data/paper/CryptoX.png" alt="CryptoX Paper" class="enlargeable" style="cursor: zoom-in;">
+            <img src="data/paper/CryptoX.png" alt="LDAgent Paper" class="enlargeable" style="cursor: zoom-in;">
           </td>
-          <td>
+          <td style="vertical-align: top;">
             <div class="pub-title">
               CryptoX: Compositional Reasoning Evaluation of Large Language Models
             </div>
@@ -323,7 +323,6 @@
               <span>Github</span>
             </a>
           </td>
-           
         </tr>
       </table>
       <!-- CryptoX的摘要容器 -->
