--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li><a href="#publications">Publications</a></li>
           <li><a href="#internships">Internships</a></li>
           <!-- <li><a href="cv.html">CV</a></li> -->
-          <li><a href="#trends">Trends</a></li>
+          <li><a href="trends.html">Trends</a></li>
         </ul>
       </nav>
     </div>
