--- a/index.html
+++ b/index.html
@@ -296,6 +296,9 @@
                 <i class="fas fa-align-left"></i>
                 Abstract
               </button>
+              <span class="metric">
+                <i class="fas fa-trophy"></i> <a href="https://razor233.github.io/CryptoX/" target="_blank" rel="noopener" style="color: #323853; text-decoration: none;">Leaderboard</a>
+              </span>
             </div>
             <br>
             <!-- # Jiajun Shi, Chaoren Wei, Liqun Yang, Zekun Moore Wang, Chenghao Yang, Ge Zhang, Stephen Huang, Tao Peng, Jian Yang, Zhoufutu Wen -->
