--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       </table>
     </div>
          <!-- Visitor Counter -->
-  <div style="text-align: center; padding: 10px 20px; margin-top: 10px; color: #666;">
+  <!-- <div style="text-align: center; padding: 10px 20px; margin-top: 10px; color: #666;">
     <div style="display: inline-flex; align-items: center; gap: 8px; background: rgba(255, 255, 255, 0.8); 
          padding: 6px 14px; border-radius: 8px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);
          transition: all 0.3s ease;
@@ -462,12 +462,12 @@
         Total Visitors: 
         <span style="margin-left: 4px;">
           <span id="visits" style="font-weight: 600; color: #000000;">
-            <span id="page_pv">0</span>
+            <span id="visitor_count">0</span>
           </span>
         </span>
       </span>
     </div>
-  </div>
+  </div> -->
     </div>
 </div><!-- /.container -->
 
@@ -477,8 +477,27 @@
     <img class="modal-content" id="modal-img">
   </div>
   <!-- Visitor Counter -->
-  <script async src="//webviso.yestool.org/js/index.min.js"></script>
-  <!-- Firebase SDK -->
+  <script>
+    // 使用本地存储实现访问计数
+    document.addEventListener('DOMContentLoaded', function() {
+      // 从服务器获取当前访问量
+      fetch('https://api.countapi.xyz/hit/chenghaoyang.com/visits')
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('visitor_count').textContent = data.value;
+        })
+        .catch(error => {
+          console.error('Error fetching visitor count:', error);
+          // 如果API调用失败，尝试使用本地存储的备份
+          const storedCount = localStorage.getItem('visitorCount');
+          if (storedCount) {
+            document.getElementById('visitor_count').textContent = storedCount;
+          }
+        });
+    });
+  </script>
+  
+  <!-- 保留原有的计数器作为备份 -->
   <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <script>
     // 为日期徽章设置随机背景色
