--- a/index.html
+++ b/index.html
@@ -449,6 +449,10 @@
           <td>◆ Outstanding Student Bronze Award , <i><a href="https://www.ustc.edu.cn/">USTC</a></i></td>
           <td class="text-right ">2024</td>
         </tr>
+        <tr>
+          <td>◆ University-level Outstanding Graduate Award, <i><a href="https://www.ustc.edu.cn/">USTC</a></i></td>
+          <td class="text-right ">2025</td>
+        </tr>
       </table>
     </div>
          <!-- Visitor Counter -->
