--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
               <span style="font-family: 'Helvetica Neue', Arial, sans-serif; color: #4a5568;">2025 Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics</span> (<b>NAACL 2025</b>).
             </div>
             <div class="timeline-links">
-              <a href="https://arxiv.org/pdf/2406.05925v1" target="_blank" rel="noopener" class="icon-link paper-link" title="View Paper">
+              <a href="https://aclanthology.org/2025.naacl-long.272/" target="_blank" rel="noopener" class="icon-link paper-link" title="View Paper">
                 <i class="fa-regular fa-file-lines"></i>
               </a> 
               <a href="https://github.com/leolee99/LD-Agent" target="_blank" rel="noopener" class="icon-link code-link" title="View Code">
@@ -469,7 +469,7 @@
               Our paper <i>"Hello Again! LLM-powered Personalized Agent for Long-term Dialogue"</i> has been published on arXiv.
             </div>
             <div class="timeline-links">
-              <a href="https://arxiv.org/pdf/2406.05925v1" target="_blank" rel="noopener" class="icon-link paper-link" title="View Paper">
+              <a href="https://aclanthology.org/2025.naacl-long.272/" target="_blank" rel="noopener" class="icon-link paper-link" title="View Paper">
                 <i class="fa-regular fa-file-lines"></i>
               </a> 
               <a href="https://github.com/leolee99/LD-Agent" target="_blank" rel="noopener" class="icon-link code-link" title="View Code">
@@ -741,7 +741,7 @@
               <img src="https://cdn-icons-png.flaticon.com/512/1077/1077063.png" alt="Conference" style="width: 16px;">
               <font style="color: gray; font-weight: bold;">NAACL 2025 (Main)</font>
             </span> · 
-            <a href="https://arxiv.org/abs/2406.05925v1" style="display: inline-flex; align-items: center; gap: 4px; text-decoration: none;">
+            <a href="https://aclanthology.org/2025.naacl-long.272/" style="display: inline-flex; align-items: center; gap: 4px; text-decoration: none;">
               <img src="https://cdn-icons-png.flaticon.com/512/8304/8304411.png" alt="PDF" style="width: 16px">
               <span>Paper</span>
             </a> · 
